--- a/Garlic_Bread_Data.ipynb
+++ b/Garlic_Bread_Data.ipynb
@@ -15,7 +15,7 @@
     "```\n",
     "youtube-dl\n",
     "Numpy\n",
-    "Maptlotlib\n",
+    "Matplotlib\n",
     "Pillow\n",
     "IPython\n",
     "Pandas\n",
